[package]
name = "dashbutton"
version = "0.1.0"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/n8henrie/dashbutton"
readme = "README.md"
keywords = ["IOT", "home-automation"]

[dependencies]
pcap = "^0.7"
toml = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
